--- a/kado-main/index.html
+++ b/kado-main/index.html
@@ -11,11 +11,11 @@
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>H</span>
-        <span>A</span>
-        <span>L</span>
         <span>L</span>
         <span>O</span>
+        <span>V</span>
+        <span>E</span>
+        <span>?</span>
     </div>
     <div class="description">
         <span>Aku ada hadiah spesial buat kamu!!</span>
