--- a/pesan .html
+++ b/pesan .html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What Is Love?</title>
+    <title>I NO NO WANNA?</title>
     <style>
         body {
             font-family: 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
@@ -96,13 +96,13 @@
 
 <body>
     <div class="subheader">
-        Interested in me?
+        Interested?
     </div>
 
     <hr>
 
     <p>
-        This message is specially dedicated to you,
+        This message is specially dedicated to you, or someone want to say something.
     </p>
 
     <p class="p1">
@@ -121,13 +121,11 @@
 
     <hr>
 
-    <p>scroll down if you want to know me.</p>
-
     <header>
         <h1>still wanna know me?</h1>
     </header>
 
-    <p>Masih ingin melanjutkan? <a class="button" href="pesan 2.html"><img class="button-icon" src="https://e7.pngegg.com/pngimages/604/843/png-clipart-number-parity-building-2-miscellaneous-angle.png" alt="klik">here</a>.</p>
+<a class="button" href="pesan 2.html"><img class="button-icon" src="https://e7.pngegg.com/pngimages/604/843/png-clipart-number-parity-building-2-miscellaneous-angle.png" alt="klik">here</a>.</p>
 </body>
 
 </html>
