--- a/pesan 2.html
+++ b/pesan 2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>What Is Love?</title>
+    <title>?LOVES?</title>
     <style>
         body {
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
@@ -92,11 +92,11 @@
 
 <body>
     <header>
-        <h1>If you're searching for answers...</h1>
+        <h1>If you're searching for answers, you will not.</h1>
     </header>
 
     <div class="subheader">
-        <p>akankah kau datang atau pergi?</p>
+        <p>its me.</p>
     </div>
 
     <hr>
