--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>What Is Love?</title>
+    <title>I no no wanna</title>
 
     <style>
         body {
@@ -79,15 +79,15 @@
 
 <body>
     <header>
-        <h1>Hi, Love?</h1>
+        <h1>Hi, who?</h1>
 
         <hr>
 
-        <div class="subheader">Ada yang ingin kukatakan, tekan icon bulan.</div>
+        <div class="subheader">Bacalah, tekan icon bulan.</div>
     </header>
 
     <p>
-        <img src="https://live.staticflickr.com/5514/10832925525_898830d5db.jpg" alt="Moon Is Beautiful">
+        <img src="https://cdn.wallpapersafari.com/5/44/odXsLu.jpg" alt="Moon Is Beautiful">
     </p>
 
     <hr>
