--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         body {
             text-align: center;
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            background-image: url('https://storage.googleapis.com/pai-images/fc78264df34740d3b0e1be45eb42dc04.jpeg');
+            background-image: url('https://pic-bstarstatic.akamaized.net/ugc/bcb79913356132dd9bd31ab5ae24bb88.jpeg');
             background-size: cover;
             background-position: center;
             margin: 0;
@@ -70,7 +70,7 @@
         }
 
         a img {
-            width: 5%;
+            width: 4%;
             height: auto;
         }
     </style>
@@ -83,14 +83,14 @@
 
         <hr>
 
-        <div class="subheader">Bacalah, tekan icon bulan.</div>
+        <div class="subheader">Bacalah, lalu tekan icon bulan.</div>
     </header>
 
     <p>
-        <img src="https://cdn.wallpapersafari.com/5/44/odXsLu.jpg" alt="Moon Is Beautiful">
+        <img src="https://i.pinimg.com/originals/bd/92/51/bd9251d4ed40833b24a240a1bde2c036.jpg" alt="Moon Is Beautiful">
     </p>
 
-    <hr>
+    
 
     <a href="pesan .html" title="Hal yang ingin kukatakan">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRV60Oq9BlsaVmnvShdDrj1ojaNZNsBtIHmEgiOJihdpA&s" alt="Moon Icon">
