--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <hr>
 
-        <div class="subheader">Bacalah, lalu tekan icon bulan.</div>
+        <div class="subheader">Bacalah sejenak, lalu tekan icon bulan.</div>
     </header>
 
     <p>
