Update pesan .html

--- a/pesan .html
+++ b/pesan .html
@@ -1,262 +1,132 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
-
-
 <head>
-
     <meta charset="UTF-8">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>I NO NO WANNA?</title>
-
     <style>
-
         body {
-
             font-family: 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
-
             background-color: #f7f7f7;
-
             margin: 0;
-
             padding: 0;
-
             text-align: center;
-
         }
-
-
 
         .subheader {
-
             font-size: 24px;
-
             font-style: italic;
-
             color: #333;
-
             margin-top: 20px;
-
         }
-
-
 
         p {
-
             font-size: 18px;
-
             color: #555;
-
             line-height: 1.6;
-
             margin: 20px;
-
         }
-
-
 
         p.p1 {
-
             font-size: 20px;
-
             color: #4e2a5e;
-
             line-height: 1.6;
-
             margin: 20px;
-
         }
-
-
 
         p.p1::first-letter {
-
             font-size: 30px;
-
-            color: #4a42e8;
-
+            color: #ed3179;
             font-weight: bold;
-
         }
-
-
 
         p.p6,
-
         p.p8 {
-
             margin: 20px;
-
         }
-
-
 
         audio,
-
         video {
-
             width: 100%;
-
             max-width: 630px;
-
             border-radius: 10px;
-
             margin-top: 15px;
-
         }
-
-
 
         iframe {
-
             width: 100%;
-
             max-width: 630px;
-
             border-radius: 5px;
-
             margin-top: 15px;
-
         }
-
-
 
         hr {
-
             border: 1px solid #ddd;
-
             margin: 20px 0;
-
         }
-
-
 
         header {
-
             background-color: #333;
-
             color: #fff;
-
             padding: 20px;
-
         }
-
-
 
         a.button {
-
             display: inline-block;
-
-            background-color: #4a42e8;
-
+            background-color: #4e2a5e;
             color: #fff;
-
             padding: 5px 10px;
-
             text-decoration: none;
-
             border-radius: 5px;
-
             transition: background-color 0.3s;
-
         }
-
-
 
         a.button:hover {
-
-            background-color: #4a42e8;
-
+            background-color: #ed3179;
         }
-
-
 
         img.button-icon {
-
             width: 24px;
-
             height: auto;
-
             margin-right: 5px;
-
         }
-
     </style>
-
 </head>
 
-
-
 <body>
-
     <div class="subheader">
-
         Interested?
-
     </div>
 
-
-
     <hr>
-
-
 
     <p>
-
         This message is specially dedicated to you, or someone want to say something.
-
     </p>
-
-
 
     <p class="p1">
-
-        Aku menyadari bahwa takdir mungkin yang berbeda untuk kita berdua. Tetapi, biarlah aku menjadi momen yang terpendam, sebuah kehidupan. Meski bahwa kamu mungkin tak merasakannya dengan cara yang sama, bayanganmu selalu mengisi ruang-ruang sepi dalam perasaanku. Biarkanlah waktu yang tak terelakkan menjauhkan dan kita, meski hanya melalui harapan. 
-
+        Hello, you “Many a book is like a key to unknown chambers within the castle of ones own self.”
+        ― Franz Kafka
     </p>
-
-
 
     <p class="p8">
-
         <div class="container">
-
             <!-- YouTube video embed code -->
-
             <iframe width="100%" height="315" src="https://www.youtube.com/embed/CRllw_LSesQ?si=ylJAkWGkwQ8kr23V" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
         </div>
 
-
-
         <!-- Spotify audio embed code -->
-
         <iframe src="https://open.spotify.com/embed/track/1IzZMjPKD924WIZrW8ygMk?utm_source=generator" width="100%" height="352" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-
     </p>
-
-
 
     <hr>
 
-
-
     <header>
-
         <h1>still wanna know me?</h1>
-
     </header>
 
-
-
 <a class="button" href="pesan 2.html"><img class="button-icon" src="https://e7.pngegg.com/pngimages/604/843/png-clipart-number-parity-building-2-miscellaneous-angle.png" alt="klik">here</a>.</p>
-
 </body>
 
-
-
 </html>
-
