--- a/pesan 2.html
+++ b/pesan 2.html
@@ -1,262 +1,134 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
-
-
 <head>
-
     <meta charset="UTF-8">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>?LOVES?</title>
-
     <style>
-
         body {
-
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-
             margin: 0;
-
             padding: 0;
-
             text-align: center;
-
             background-color: #f7f7f7; /* Default background color for the body */
-
         }
-
-
 
         header {
-
             background-color: #333;
-
             color: #fff;
-
             padding: 20px;
-
             background-image: url('your-background-image.jpg'); /* Add your background image URL here */
-
             background-size: cover;
-
         }
-
-
 
         .subheader {
-
             font-size: 24px;
-
             font-style: italic;
-
             color: #333;
-
             margin-top: 20px;
-
         }
-
-
 
         p {
-
             font-size: 18px;
-
             color: #555;
-
             line-height: 1.6;
-
             margin: 20px;
-
         }
-
-
 
         p.p1 {
-
             font-size: 20px;
-
             color: #4e2a5e;
-
             line-height: 1.6;
-
             margin: 20px;
-
         }
-
-
 
         p.p1::first-letter {
-
             font-size: 30px;
-
             color: #ed3179;
-
             font-weight: bold;
-
         }
-
-
 
         p.p6,
-
         p.p8 {
-
             margin: 20px;
-
         }
-
-
 
         audio,
-
         video,
-
         iframe {
-
             width: 100%;
-
             max-width: 630px;
-
             border-radius: 10px;
-
             margin-top: 15px;
-
         }
-
-
 
         hr {
-
             border: 1px solid #ddd;
-
             margin: 20px 0;
-
         }
-
-
 
         a.button {
-
             display: inline-block;
-
             background-color: #4e2a5e;
-
             color: #fff;
-
             padding: 5px 10px;
-
             text-decoration: none;
-
             border-radius: 5px;
-
             transition: background-color 0.3s;
-
         }
-
-
 
         a.button:hover {
-
             background-color: #ed3179;
-
         }
-
-
 
         img.button-icon {
-
             width: 24px;
-
             height: auto;
-
             margin-right: 5px;
-
         }
-
     </style>
-
 </head>
 
-
-
 <body>
-
     <header>
-
         <h1>If you're searching for answers, you will not.</h1>
-
     </header>
 
-
-
     <div class="subheader">
-
         <p>its me.</p>
-
     </div>
-
-
 
     <hr>
 
-
-
     <p>
-
         This message is for you, Let these words be the response to your inquisitive heart.
-
     </p>
-
-
 
     <p class="p1">
-
-        <span> biarkan perasaanmu yang berkata. Kenalilah aku sebagai pengembara asing bagimu.</span>
-
+        <span>“I write differently from what I speak, I speak differently from what I think, I think differently from the way I ought to think, and so it all proceeds into deepest darkness.”</span>
     </p>
-
     <p>
-
-        biarkan perasaanmu menjalankan insting wanitanya apa yang pasti mengganggu kamu dengan pertanyaan-pertanyaan di benakmu. Sebagai pengembara asing, menyadari bahwa pertemuan kita hanyalah sementara, dimana kita bertemu dalam keadaan dunia tidak berada dalam genggaman masing-masing dari kamu dan aku.
-
+        this website purposes is for my personal write, my mind then i make words
     </p>
-
+    <p>
+        ...
+    </p>
     <p class="p8">
-
         <div class="container">
-
             <!-- YouTube video embed code -->
-
             <iframe width="100%" height="315" src="https://www.youtube.com/embed/Pc3z4cpDh60?si=IvjrcefGd6GNeBqx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
         </div>
 
-
-
         <!-- Spotify audio embed code -->
-
         <iframe style="border-radius: 12px" src="https://open.spotify.com/embed/track/1m9TZ1dpYEQnczSsI6z9Ku?utm_source=generator" width="100%" height="352" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-
     </p>
 
+    <p>Scroll down.</p>
 
-
-    <p>Scroll down if you even care.</p>
-
-
-
-    <p>aku tidak akan mengatakan hal apapun lagi kecuali kau bertanya
-
+    
     <a class="button" href="kado-main/index.html">
-
         <img class="button-icon" src="" alt="klik">lanjut</a>.</p>
-
 </body>
 
-
-
 </html>
-
