--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>I no no wanna</title>
+    <title>Hello?</title>
 
     <style>
         body {
             text-align: center;
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            background-image: url('https://pic-bstarstatic.akamaized.net/ugc/bcb79913356132dd9bd31ab5ae24bb88.jpeg');
+            background-image: url('https://pbs.twimg.com/media/F-V-nb2a0AAXJB_.jpg:large');
             background-size: cover;
             background-position: center;
             margin: 0;
@@ -83,7 +83,7 @@
 
         <hr>
 
-        <div class="subheader">Bacalah sejenak, lalu tekan icon bulan.</div>
+        <div class="subheader">Bacalah, lalu tekan icon bulan.</div>
     </header>
 
     <p>
